// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextElement adds line break before line ends 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  Hello
  <br />
  where are you
  <br />
  today?
  <br />
</p>
`;

exports[`TextElement element produces normal output with display true 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  Hello
  where are you
</p>
`;

exports[`TextElement element produces null output with display false 1`] = `null`;

exports[`TextElement element produces output containing ReactElement children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-d7cqv5-MuiTypography-root"
  id="page1.para1"
>
  Hello
  <p>
    where are you
  </p>
</p>
`;

exports[`TextElement element produces output containing string children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  Hello
  where are you
</p>
`;

exports[`TextElement element produces output containing string version of function children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  function Sum
</p>
`;

exports[`TextElement element produces output containing string version of object children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  {a: 10}
  {c: 'Hi'}
</p>
`;

exports[`TextElement element produces output containing undefined children 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
/>
`;

exports[`TextElement element produces output containing valueOf  object 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  id="page1.para1"
>
  where are you
</p>
`;

exports[`TextElement gets property values supplied as state objects 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-1yr004l-MuiTypography-root"
  id="page1.para1"
>
  Hello
  <p>
    where are you
  </p>
</p>
`;
